# xrdp

libpainter/: configure.ac
librfxcodec/: configure.ac  simd-notes.txt
librfxcodec/include/: rfxcodec_encode.h
librfxcodec/src/: Makefile.am  rfxcommon.h  rfxencode.c  rfxencode_dwt_shift_rem_common.h
librfxcodec/src/neon/: Makefile.am  rfxencode_diff_count_neon.c  rfxencode_diff_count_neon.h  rfxencode_dwt_shift_rem_neon.c  rfxencode_dwt_shift_rem_neon.h
librfxcodec/src/sse2/: rfxencode_dwt_shift_rem_sse2.c  rfxencode_dwt_shift_rem_sse2.h
tests/common/: test_common.h  test_common_main.c  test_fifo_calls.c
